Fix link color on small screens, closes #602

--- a/admin/style/default.css
+++ b/admin/style/default.css
@@ -567,7 +567,7 @@ h6 {
   --rch-table-expand-color: var(--body-color);
   --rch-table-expand-background: var(--body-background);
   --rch-table-expand-border: #ececec;
-  --rch-table-td-link: #bee74b;
+  --rch-table-td-link: #2373a8;
   --badge-color: #fff;
   --badge-border: transparent;
   --badge-std-background: #d54e21;
