--- a/admin/style/scss/themes/_default.scss
+++ b/admin/style/scss/themes/_default.scss
@@ -458,7 +458,7 @@
   --rch-table-expand-color: var(--body-color);
   --rch-table-expand-background: var(--body-background);
   --rch-table-expand-border: #{$gray-lighter};
-  --rch-table-td-link: #{$link-outline};
+  --rch-table-td-link: #{$link};
 
   // Utils
 
